<resources>
    <string name="app_name">Parking</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="signup">SignUp</string>
    <string name="_1">1</string>
    <string name="parking_name">Parking name</string>
</resources>